--- a/Back/src1/package.json
+++ b/Back/src1/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.7.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
