--- a/Back/code/package.json
+++ b/Back/code/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^6.0.0",
     "express-status-monitor": "^1.3.3",
     "express-validation": "^3.0.5",
+    "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
