--- a/Front/code/package.json
+++ b/Front/code/package.json
@@ -48,6 +48,7 @@
     "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.28.3",
     "change-case": "^4.1.2",
