--- a/Front/code/.eslintrc
+++ b/Front/code/.eslintrc
@@ -55,6 +55,7 @@
     "import/no-extraneous-dependencies": 0,
     "react/jsx-key": 1,
     "react-hooks/rules-of-hooks": 2,
+    "react-hooks/exhaustive-deps": 2,
     "no-unused-vars": [
       1,
       {
