--- a/Front/code/package.json
+++ b/Front/code/package.json
@@ -57,6 +57,8 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
@@ -64,6 +66,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
