--- a/Back/code/.eslintrc.json
+++ b/Back/code/.eslintrc.json
@@ -11,6 +11,7 @@
     "class-methods-use-this": "off",
     "operator-linebreak": "off",
     "object-curly-newline": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "endOfLine": "auto"
   }
 }
