--- a/Front/code/package.json
+++ b/Front/code/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-i18next": "^11.15.5",
+    "react-query": "^3.34.16",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.4",
