--- a/Front/code/package.json
+++ b/Front/code/package.json
@@ -51,6 +51,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.28.3",
+    "axios": "^0.26.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
     "faker": "^5.5.3",
@@ -67,7 +68,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-i18next": "^11.15.5",
-    "react-query": "^3.34.16",
+    "react-query": "^3.34.19",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.4",
