CLP: added some description of the project in readme, and updated some dependecies and add a guest user in database

--- a/Back/code/.env.dist
+++ b/Back/code/.env.dist
@@ -3,9 +3,9 @@ FRONT_BASE_URL=http://localhost:4200
 
 DB_HOST=172.18.0.2
 DB_PORT=27017   
-DB_USER=boilerplate_user
-DB_PASS=boilerplate_pw
-DB_NAME=boilerplate
+DB_USER=guest
+DB_PASS=guest123456
+DB_NAME=gana-premios-test
 DB_MODEL=models
 
 NODE_ENV=development
